rlimgui_basic/rlimgui.nim

# Generated by hand, by dinau 2025/10

import std/[os,strutils]
import raylib

proc currentSourceDir(): string {.compileTime.} =
  result = currentSourcePath().replace("\\", "/")
  result = result[0 ..< result.rfind("/")]

const nimble_imgui_dirs = staticExec("nimble path imguin").strip.split("\n")
{.passC:"-I" & joinPath(nimble_imgui_dirs[0],"imguin","private","cimgui","imgui").replace("\\", "/").} # dirs[0]: Select max hash version: TODO

const nimble_naylib_dirs = staticExec("nimble path naylib").strip.split("\n")
{.passC:"-I" & joinPath(nimble_naylib_dirs[0],"naylib").replace("\\", "/").} # dirs[0]: Select max hash version: TODO

const rlimguiPath = joinPath(currentSourceDir(),"rlimgui").replace("\\", "/")
{.passC:"-I" & rlimguiPath.}
{.compile:joinPath(rlimguiPath,"rlImGui.cpp").replace("\\", "/").}

{.passC:"-D NO_FONT_AWESOME".}

#-------------------
# rlImGui functions
#-------------------

# void rlImGuiSetup(bool darkTheme);
proc rlImGuiSetup*(darkTheme: bool): void {.cdecl, importc: "rlImGuiSetup".}

# void rlImGuiBegin(void);
proc rlImGuiBegin*(): void {.cdecl, importc: "rlImGuiBegin".}

# void rlImGuiEnd(void);
proc rlImGuiEnd*(): void {.cdecl, importc: "rlImGuiEnd".}

# void rlImGuiShutdown(void);
proc rlImGuiShutdown*(): void {.cdecl, importc: "rlImGuiShutdown".}

# void rlImGuiBeginInitImGui(void);
proc rlImGuiBeginInitImGui*(): void {.cdecl, importc: "rlImGuiBeginInitImGui".}

# void rlImGuiEndInitImGui(void);
proc rlImGuiEndInitImGui*(): void {.cdecl, importc: "rlImGuiEndInitImGui".}

# void rlImGuiBeginDelta(float deltaTime);
proc rlImGuiBeginDelta*(deltaTime: cfloat): void {.cdecl, importc: "rlImGuiBeginDelta".}

# void rlImGuiImage(const Texture *image);
proc rlImGuiImage*(image: ptr Texture): void {.cdecl, importc: "rlImGuiImage".}

# void rlImGuiImageSize(const Texture *image, int width, int height);
proc rlImGuiImageSize*(image: ptr Texture; width: cint; height: cint): void {.  cdecl, importc: "rlImGuiImageSize".}

# void rlImGuiImageSizeV(const Texture* image, Vector2 size);
proc rlImGuiImageSizeV*(image: ptr Texture; size: Vector2): void {.  cdecl, importc: "rlImGuiImageSizeV".}

# void rlImGuiImageRect(const Texture* image, int destWidth, int destHeight, Rectangle sourceRect);
proc rlImGuiImageRect*(image: ptr Texture; destWidth: cint; destHeight: cint; sourceRect: Rectangle): void {.  cdecl, importc: "rlImGuiImageRect".}

# void rlImGuiImageRenderTexture(const RenderTexture* image);
proc rlImGuiImageRenderTexture*(image: ptr RenderTexture): void {.  cdecl, importc: "rlImGuiImageRenderTexture".}

# void rlImGuiImageRenderTextureFit(const RenderTexture* image, bool center);
proc rlImGuiImageRenderTextureFit*(image: ptr RenderTexture; center: bool): void {.cdecl, importc: "rlImGuiImageRenderTextureFit".}

# bool rlImGuiImageButton(const char* name, const Texture* image);
proc rlImGuiImageButton*(name: cstring; image: ptr Texture): bool {.  cdecl, importc: "rlImGuiImageButton".}

# bool rlImGuiImageButtonSize(const char* name, const Texture* image, Vector2 size);
proc rlImGuiImageButtonSize*(name: cstring; image: ptr Texture; size: Vector2): bool {.cdecl, importc: "rlImGuiImageButtonSize".}
